--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <body>
         <h1>Bienvenue à Ludus Linguarum !</h1>
         <p>Apprenez l'anglais à travers des chapitres.</p>
+        <div id="chapitre-container"></div>
         <script src="app.js"></script>
     </body>
 </html>
